--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">Tokoku.id</string>
     <string name="produk">Produk</string>
     <string name="baru">Baru</string>
-    <string name="search">Search</string>
+    <string name="search">Cari</string>
     <string name="deskripsi">Deskripsi</string>
     <string name="tambah_ke_keranjang">Tambah ke keranjang</string>
     <string name="total_berat">Total Berat</string>
@@ -17,10 +17,6 @@
     <string name="keranjang">Keranjang</string>
     <string name="jenis_pengiriman">Jenis Pengiriman</string>
     <string name="bayar_sekarang">Bayar Sekarang</string>
-    <string name="home_fragment">home</string>
-    <string name="chatting_fragment">Chatting</string>
-    <string name="feed_fragment">Feed</string>
-    <string name="profile_fragment">Profile</string>
     <string name="keranjang_kosong">Keranjang Kosong</string>
     <string name="title_cart">Cart</string>
 
